Implementation of CSS stylesheet

--- a/infographicsite/templates/index.html
+++ b/infographicsite/templates/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-
+        {% load static %}
   <head>
     <meta charset="UTF-8">
     <title>Please Upload File Here</title>
+    <link rel="stylesheet" type="text/css" href="{% static 'styles.css' %}"/>
   </head>
 
   <!-- upload file button -->
