--- a/infographicsite/templates/results.html
+++ b/infographicsite/templates/results.html
@@ -1,35 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+            <!-- declare global context variable -->
+        {{ context | json_script:"context" }}
+
+        {% load static %}
 
     <head>
         <meta charset="UTF-8">
         <title>Data Analysis Results</title>
+        <link rel="stylesheet" type="text/css"  href="{% static 'styles.css' %}"/>
     </head>
 
 
     <!--- Script tag at top -->
+
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.4"></script>
     <script src="https://cdn.jsdelivr.net/gh/emn178/chartjs-plugin-labels/src/chartjs-plugin-labels.js"></script>
 
-    <!-- declare global context variable -->
-    {{ context | json_script:"context" }}
+    <body>
 
-    {% load static %}
+        <!--- chart canvases and alignment  -->
+        <div class="canvasContainer">
+            <div class="canvasWrapper"><canvas id="gender-chart" width="100" height="30"></canvas></div>
+            <div class="canvasWrapper"><canvas id="firstname-chart" width = "50" height = "30"></canvas></div>
+            <div class="canvasWrapper"><canvas id="lastname-chart" width = "50" height = "30"></canvas></div>
+            <div class="canvasWrapper"><canvas id="locations-chart" width = "50" height = "30"></canvas></div>
+            <div class="canvasWrapper"><canvas id="female-chart" width = "50" height = "30"></canvas></div>
+            <div class="canvasWrapper"><canvas id="male-chart" width = "50" height = "30"></canvas></div>
+            <div class="canvasWrapper"><canvas id="nonbinary-chart" width = "50" height = "30"></canvas></div>
+            <div class="canvasWrapper"><canvas id="age-chart" width = "50" height = "30"></canvas></div>
+        </div>
+        <!-- End of chart canvases-->
+        <script src="{% static 'chart.js' %}" type="text/javascript"></script>
+    </body>
 
-    <!--- chart canvases and alignment  -->
-    <canvas id="gender-chart" width="100" height="30"></canvas>
-    <canvas id="firstname-chart" width = "50" height = "30"></canvas>
-    <canvas id="lastname-chart" width = "50" height = "30"></canvas>
-    <canvas id="locations-chart" width = "50" height = "30"></canvas>
-    <canvas id="female-chart" width = "50" height = "30"></canvas>
-    <canvas id="male-chart" width = "50" height = "30"></canvas>
-    <canvas id="nonbinary-chart" width = "50" height = "30"></canvas>
-    <canvas id="age-chart" width = "50" height = "30"></canvas>
-
-
-
-    <!-- End of chart canvases-->
-    <script src="{% static 'chart.js' %}" type="text/javascript"></script>
 
 
 </html>
