--- a/infographicsite/templates/index.html
+++ b/infographicsite/templates/index.html
@@ -1,26 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+        {{ context | json_script:"context" }}
         {% load static %}
   <head>
     <meta charset="UTF-8">
     <title>Please Upload File Here</title>
     <link rel="stylesheet" type="text/css" href="{% static 'styles.css' %}"/>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.4"></script>
+    <script src="https://cdn.jsdelivr.net/gh/emn178/chartjs-plugin-labels/src/chartjs-plugin-labels.js"></script>
   </head>
 
   <!-- upload file button -->
   <body>
-    <form method="POST" enctype="multipart/form-data">
-        {% csrf_token %}
-      <!-- accept filters selection and only seeks json files -->
-      <input type="file" required accept=".json" name="file">
-      <br>
-      <input type="submit" name="visualize" value="Generate Chart" formaction="/"> <!-- Visualize JSON data into charts -->
-      <input type="submit" value="Download File" name="download" formaction="/data"> <!-- Export JSON data into a file -->
-    </form>
-
-    <!-- end of upload file button -->
-
-    <canvas id="chart" width="500" height="500"></canvas>
+    <div>
+      <form method="POST" enctype="multipart/form-data">
+          {% csrf_token %}
+        <!-- accept filters selection and only seeks json files -->
+        <input type="file" required accept=".json" name="file">
+        <br>
+        <input type="submit" name="visualize" value="Generate Chart" formaction="/"> <!-- Visualize JSON data into charts -->
+        <input type="submit" value="Download File" name="download" formaction="/data"> <!-- Export JSON data into a file -->
+      </form>
+    </div>
+      <div class="canvasContainer">
+          <div class="canvasWrapper"><canvas id="gender-chart" ></canvas></div>
+          <div class="canvasWrapper"><canvas id="firstname-chart"></canvas></div>
+          <div class="canvasWrapper"><canvas id="lastname-chart" ></canvas></div>
+          <div class="canvasWrapper"><canvas id="locations-chart" ></canvas></div>
+          <div class="canvasWrapper"><canvas id="female-chart" ></canvas></div>
+          <div class="canvasWrapper"><canvas id="male-chart" ></canvas></div>
+          <div class="canvasWrapper"><canvas id="nonbinary-chart" ></canvas></div>
+          <div class="canvasWrapper"><canvas id="age-chart" ></canvas></div>
+      </div>
+      <!-- End of chart canvases-->
+      <script src="{% static 'chart.js' %}" type="text/javascript"></script>
   </body>
 
   <!--- End of Load JSON file to chart -->
