--- a/infographicsite/templates/results.html
+++ b/infographicsite/templates/results.html
@@ -21,14 +21,14 @@
 
         <!--- chart canvases and alignment  -->
         <div class="canvasContainer">
-            <div class="canvasWrapper"><canvas id="gender-chart" width="100" height="30"></canvas></div>
-            <div class="canvasWrapper"><canvas id="firstname-chart" width = "50" height = "30"></canvas></div>
-            <div class="canvasWrapper"><canvas id="lastname-chart" width = "50" height = "30"></canvas></div>
-            <div class="canvasWrapper"><canvas id="locations-chart" width = "50" height = "30"></canvas></div>
-            <div class="canvasWrapper"><canvas id="female-chart" width = "50" height = "30"></canvas></div>
-            <div class="canvasWrapper"><canvas id="male-chart" width = "50" height = "30"></canvas></div>
-            <div class="canvasWrapper"><canvas id="nonbinary-chart" width = "50" height = "30"></canvas></div>
-            <div class="canvasWrapper"><canvas id="age-chart" width = "50" height = "30"></canvas></div>
+            <div class="canvasWrapper"><canvas id="gender-chart" ></canvas></div>
+            <div class="canvasWrapper"><canvas id="firstname-chart"></canvas></div>
+            <div class="canvasWrapper"><canvas id="lastname-chart" ></canvas></div>
+            <div class="canvasWrapper"><canvas id="locations-chart" ></canvas></div>
+            <div class="canvasWrapper"><canvas id="female-chart" ></canvas></div>
+            <div class="canvasWrapper"><canvas id="male-chart" ></canvas></div>
+            <div class="canvasWrapper"><canvas id="nonbinary-chart" ></canvas></div>
+            <div class="canvasWrapper"><canvas id="age-chart" ></canvas></div>
         </div>
         <!-- End of chart canvases-->
         <script src="{% static 'chart.js' %}" type="text/javascript"></script>
