--- a/infographicsite/templates/index.html
+++ b/infographicsite/templates/index.html
@@ -8,20 +8,37 @@
     <link rel="stylesheet" type="text/css" href="{% static 'styles.css' %}"/>
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.4"></script>
     <script src="https://cdn.jsdelivr.net/gh/emn178/chartjs-plugin-labels/src/chartjs-plugin-labels.js"></script>
+      <script src="https://platform.linkedin.com/badges/js/profile.js" async defer type="text/javascript"></script>
   </head>
 
-  <!-- upload file button -->
   <body>
-    <div>
+  <!----
+  <h1 class="text-light">Sam's Infographic Site</h1>
+  <h2 class="text-light small font-weight-bold"> by Samantha Badeau</h2>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/js/all.min.js"
+          integrity="sha256-qM7QTJSlvtPSxVRjVWNM2OfTAz/3k5ovHOKmKXuYMO4=" crossorigin="anonymous"></script>
+  --->
+
+  <h1><a href="#0">Sam's Infographic Site</a></h1>
+  <div>
+
       <form method="POST" enctype="multipart/form-data">
           {% csrf_token %}
         <!-- accept filters selection and only seeks json files -->
         <input type="file" required accept=".json" name="file">
         <br>
+          <!-- upload file button -->
         <input type="submit" name="visualize" value="Generate Chart" formaction="/"> <!-- Visualize JSON data into charts -->
         <input type="submit" value="Download File" name="download" formaction="/data"> <!-- Export JSON data into a file -->
+        <!-- <select name="contentType" id="contentType">
+          <option value="application/json" selected>JSON</option>
+          <option value="application/xml">XML</option>
+          <option value="text/plain">Text</option>
+        </select> -->
       </form>
-    </div>
+
+
+  </div>
       <div class="canvasContainer">
           <div class="canvasWrapper"><canvas id="gender-chart" ></canvas></div>
           <div class="canvasWrapper"><canvas id="firstname-chart"></canvas></div>
@@ -31,10 +48,18 @@
           <div class="canvasWrapper"><canvas id="male-chart" ></canvas></div>
           <div class="canvasWrapper"><canvas id="nonbinary-chart" ></canvas></div>
           <div class="canvasWrapper"><canvas id="age-chart" ></canvas></div>
+          <div class="badge-base LI-profile-badge" data-locale="en_US" data-size="medium"
+               data-type="VERTICAL" data-vanity="samanthabadeau" data-version="v1"><a
+                  class="badge-base__link LI-simple-link"
+                  href="https://www.linkedin.com/in/samanthabadeau?trk=profile-badge">By: Samantha Badeau</a></div>
+
       </div>
       <!-- End of chart canvases-->
       <script src="{% static 'chart.js' %}" type="text/javascript"></script>
+
+
   </body>
+
 
   <!--- End of Load JSON file to chart -->
 </html>
