attempted to implement download json into xml and plain text calculations

--- a/infographicsite/templates/index.html
+++ b/infographicsite/templates/index.html
@@ -29,12 +29,13 @@
         <br>
           <!-- upload file button -->
         <input type="submit" name="visualize" value="Generate Chart" formaction="/"> <!-- Visualize JSON data into charts -->
-        <input type="submit" value="Download File" name="download" formaction="/data"> <!-- Export JSON data into a file -->
-        <!-- <select name="contentType" id="contentType">
+        <input type="submit" value="Download File Calculations" name="download" formaction="/data"> <!-- Export JSON data into a file -->
+        <!-- -->
+          <select name="contentType" id="contentType"> Options to download file calculations in certain form
           <option value="application/json" selected>JSON</option>
           <option value="application/xml">XML</option>
           <option value="text/plain">Text</option>
-        </select> -->
+        </select>
       </form>
 
 
