--- a/infographicsite/templates/index.html
+++ b/infographicsite/templates/index.html
@@ -38,7 +38,7 @@
         </select>
       </form>
 
-      <h4>Please click <a href="userUploadedFiles\hugeUserData_Wa9xUA9.json" download= "hugeJSONFile">here</a>to download a sample JSON file to upload.</h4>
+      <h3>Please click <a href="infographicsite\templates\hugeJSONFile.json" download= "hugeJSONFile">here</a> to download a sample JSON file to upload.</h3>
 
 
   </div>
