added link to random site, fixed file

--- a/infographicsite/templates/index.html
+++ b/infographicsite/templates/index.html
@@ -38,7 +38,8 @@
         </select>
       </form>
 
-      <h3>Please click <a href="infographicsite\templates\hugeJSONFile.json" download= "hugeJSONFile">here</a> to download a sample JSON file to upload.</h3>
+      <h3>Please click <a href="staticfiles\hugeJSONFile.json" download= "hugeJSONFile">here</a> to download a sample JSON file to upload. JSON files are made via RandomUser API
+      found at random user <a href="https://randomuser.me/documentation">website.</a></h3>
 
 
   </div>
