--- a/infographicsite/templates/index.html
+++ b/infographicsite/templates/index.html
@@ -45,7 +45,7 @@
       JSON files are made via RandomUser API
       found at random user <a href="https://randomuser.me/documentation" target="_blank">website.</a></h3>
 
-    <script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js">
       function loadDoc() {
         $.ajax({
           url: 'https://randomuser.me/api/',
