--- a/infographicsite/templates/index.html
+++ b/infographicsite/templates/index.html
@@ -10,6 +10,7 @@
   <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.4"></script>
   <script src="https://cdn.jsdelivr.net/gh/emn178/chartjs-plugin-labels/src/chartjs-plugin-labels.js"></script>
   <script src="https://platform.linkedin.com/badges/js/profile.js" async defer type="text/javascript"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
 
 <body>
@@ -45,7 +46,7 @@
       JSON files are made via RandomUser API
       found at random user <a href="https://randomuser.me/documentation" target="_blank">website.</a></h3>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js">
+    <script>
         $.ajax({
           url: 'https://randomuser.me/api/',
           dataType: 'json',
