--- a/infographicsite/templates/index.html
+++ b/infographicsite/templates/index.html
@@ -42,17 +42,28 @@
       </select>
     </form>
 
-    <h3>Please click <button type="button" onclick="loadDoc()">here</button> to download a sample JSON file to upload.
-      JSON files are made via RandomUser API
+    <h3>Please click <button type="button" id="GetFile">here</button> to get sample JSON file to upload to site. JSON files are made via RandomUser API
       found at random user <a href="https://randomuser.me/documentation" target="_blank">website.</a></h3>
 
     <script>
-      $.ajax({
-        url: 'https://randomuser.me/api/',
-        dataType: 'json',
-        success: function (data) {
-          console.log(data);
-        }
+      $('#GetFile').on('click', function () {
+        $.ajax({
+          url: 'https://randomuser.me/api/',
+          method: 'GET',
+          xhrFields: {
+            responseType: 'blob'
+          },
+          success: function (data) {
+            var a = document.createElement('a');
+            var url = window.URL.createObjectURL(data);
+            a.href = url;
+            a.download = 'myfile.pdf';
+            document.body.append(a);
+            a.click();
+            a.remove();
+            window.URL.revokeObjectURL(url);
+          }
+        });
       });
     </script>
 
