--- a/infographicsite/templates/index.html
+++ b/infographicsite/templates/index.html
@@ -42,14 +42,15 @@
       </select>
     </form>
 
-    <h3>Please click <input type = "button" onclick = "callAjax()" value = "here"> to get sample JSON file to upload to site. 
-      JSON files are made via RandomUser API found at random user <a href="https://randomuser.me/documentation" target="_blank">website.</a></h3>
+    <h3>Please click <input type="button" onclick="callAjax()" value="here"> to get sample JSON file to upload to site.
+      JSON files are made via RandomUser API found at random user <a href="https://randomuser.me/documentation"
+        target="_blank">website.</a></h3>
 
     <script type="text/javascript">
       function callAjax() {
         $.ajax({
-          url: 'https://randomuser.me/api/',
-          success: download.bind(true, "userData.js", "application/json")
+          url: "https://randomuser.me/api/",
+          success: download.bind(true, "text/json", "application/json")
         });
       }
     </script>
