changed files again

--- a/infographicsite/templates/index.html
+++ b/infographicsite/templates/index.html
@@ -42,30 +42,16 @@
       </select>
     </form>
 
-    <h3>Please click <input type="button" onclick="callAjax()" value="here"> to get sample JSON file to upload to site.
-      JSON files are made via RandomUser API found at random user <a href="https://randomuser.me/documentation"
-        target="_blank">website.</a></h3>
+    <h3>Please click <input type = "button" onclick = "callAjax()" value = "here"> to get sample JSON file to upload to site. 
+      JSON files are made via RandomUser API found at random user <a href="https://randomuser.me/documentation" target="_blank">website.</a></h3>
 
     <script type="text/javascript">
-      $(function callAjax() {
-        $("button").click(function () {
-          $.ajax({
-            url: 'https://randomuser.me/api/', // my URL
-            type: "GET",
-            dataType: 'json',
-            success: function (result) {
-              var url = URL.createObjectURL(result);
-              var $a = $('<a />', {
-                'href': url,
-                'download': 'userData.json',
-                'text': "click"
-              }).hide().appendTo("body")[0].click();
-
-              // URL.revokeObjectURL(url);
-            }
-          });
+      function callAjax() {
+        $.ajax({
+          url: 'https://randomuser.me/api/',
+          success: download.bind(true, "userData.js", "application/json")
         });
-      });
+      }
     </script>
 
 
