--- a/infographicsite/templates/index.html
+++ b/infographicsite/templates/index.html
@@ -42,8 +42,9 @@
       </select>
     </form>
 
-    <h3>Please click <input type = "button" onclick = "callAjax()" value = "here"> to get sample JSON file to upload to site. 
-      JSON files are made via RandomUser API found at random user <a href="https://randomuser.me/documentation" target="_blank">website.</a></h3>
+    <h3>Please click <button onclick="callAjax()">here</button> to get sample JSON file to upload to site.
+      JSON files are made via RandomUser API found at random user <a href="https://randomuser.me/documentation"
+        target="_blank">website.</a></h3>
 
     <script type="text/javascript">
       function callAjax() {
