changed files again

--- a/infographicsite/templates/index.html
+++ b/infographicsite/templates/index.html
@@ -11,6 +11,7 @@
   <script src="https://cdn.jsdelivr.net/gh/emn178/chartjs-plugin-labels/src/chartjs-plugin-labels.js"></script>
   <script src="https://platform.linkedin.com/badges/js/profile.js" async defer type="text/javascript"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+  <script src="http://danml.com/download.html#Download"></script>
 </head>
 
 <body>
@@ -42,9 +43,8 @@
       </select>
     </form>
 
-    <h3>Please click <button onclick="callAjax()">here</button> to get sample JSON file to upload to site.
-      JSON files are made via RandomUser API found at random user <a href="https://randomuser.me/documentation"
-        target="_blank">website.</a></h3>
+    <h3>Please click <input type = "button" onclick = "callAjax()" value = "here"> to get sample JSON file to upload to site. 
+      JSON files are made via RandomUser API found at random user <a href="https://randomuser.me/documentation" target="_blank">website.</a></h3>
 
     <script type="text/javascript">
       function callAjax() {
