--- a/infographicsite/templates/index.html
+++ b/infographicsite/templates/index.html
@@ -11,7 +11,7 @@
   <script src="https://cdn.jsdelivr.net/gh/emn178/chartjs-plugin-labels/src/chartjs-plugin-labels.js"></script>
   <script src="https://platform.linkedin.com/badges/js/profile.js" async defer type="text/javascript"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-  <script src="http://danml.com/js/download.js"></script>
+  <script src="https://danml.com/js/download.js"></script>
 </head>
 
 <body>
