--- a/infographicsite/templates/index.html
+++ b/infographicsite/templates/index.html
@@ -11,7 +11,6 @@
   <script src="https://cdn.jsdelivr.net/gh/emn178/chartjs-plugin-labels/src/chartjs-plugin-labels.js"></script>
   <script src="https://platform.linkedin.com/badges/js/profile.js" async defer type="text/javascript"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-  <script src="infographicsite\templates\download.js"></script>
 </head>
 
 <body>
@@ -43,7 +42,7 @@
       </select>
     </form>
 
-    <h3>Please click <input type = "button" onclick = "callAjax()" value = "here"> to get sample JSON file to upload to site! 
+    <h3>Please click <input type = "button" onclick = "callAjax()" value = "here"> to get sample JSON file to upload to site!! 
       JSON files are made via RandomUser API found at random user <a href="https://randomuser.me/" target="_blank">website.</a></h3>
 
     <script type="text/javascript">
@@ -75,6 +74,7 @@
   </div>
   <!-- End of chart canvases-->
   <script src="{% static 'chart.js' %}" type="text/javascript"></script>
+  <script src="{% static 'download.js' %}" type= "text/javascript"></script>
 
 
 </body>
